# movie-scrapper-api

./: CHANGELOG.md  README.md  pyproject.toml
movie_scrapper_api/: __main__.py  config.py  logging.py  scrapper.py
movie_scrapper_api/api/v1/: routes.py
movie_scrapper_api/models/: errors.py  media.py
tests/: test_scrapper.py
